--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-validated-form": "^4.5.5",
+    "tabler-icons-react": "^1.55.0",
     "tiny-invariant": "^1.2.0",
     "zod": "^3.18.0",
     "zod-form-data": "^1.2.1"
