--- a/package.json
+++ b/package.json
@@ -39,16 +39,17 @@
     "@remix-run/serve": "^1.7.0",
     "@remix-run/server-runtime": "^1.7.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.5",
     "framer-motion": "^6",
     "isbot": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-validated-form": "^4.5.5",
     "tabler-icons-react": "^1.55.0",
+    "tiny-invariant": "^1.2.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4",
-    "tiny-invariant": "^1.2.0",
     "zod": "^3.18.0",
     "zod-form-data": "^1.2.1"
   },
